force-app/main/default/objects/ExpoInfo__c/ExpoInfo__c.object-meta.xml
<CustomObject>
    <description>展会信息</description>
    <label>Exhibition Management</label>
    <nameField>
        <label>Exhibition Name CN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Managements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>