force-app/main/default/objects/ExpoInfo__c/fields/AddressEN__c.field-meta.xml
<CustomField>
    <fullName>AddressEN__c</fullName>
    <label>Address EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>