force-app/main/default/objects/ExpoInfo__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <description>抵达文案</description>
    <label>Arrival</label>
    <length>255</length>
    <type>Text</type>
</CustomField>