force-app/main/default/objects/ExpoInfo__c/fields/Arrival_CN__c.field-meta.xml
<CustomField>
    <fullName>Arrival_CN__c</fullName>
    <description>接机中文文案</description>
    <label>Arrival CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>