force-app/main/default/objects/ExpoInfo__c/fields/ContentEN__c.field-meta.xml
<CustomField>
    <fullName>ContentEN__c</fullName>
    <label>Exhibition Detail EN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>