force-app/main/default/objects/ExpoInfo__c/fields/CoverImgPublicLink__c.field-meta.xml
<CustomField>
    <fullName>CoverImgPublicLink__c</fullName>
    <description>外链</description>
    <label>CoverImg Public Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>