force-app/main/default/objects/ExpoInfo__c/fields/CoverImgVersionId__c.field-meta.xml
<CustomField>
    <fullName>CoverImgVersionId__c</fullName>
    <description>文件Id</description>
    <label>CoverImgVersionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>