force-app/main/default/objects/ExpoInfo__c/fields/DisplayInThePortal__c.field-meta.xml
<CustomField>
    <fullName>DisplayInThePortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display in the Portal</label>
    <type>Checkbox</type>
</CustomField>