force-app/main/default/objects/ExpoInfo__c/fields/Exhibition_Nature__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Nature__c</fullName>
    <label>Exhibition Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>展会</fullName>
            </value>
            <value>
                <fullName>年会</fullName>
            </value>
            <value>
                <fullName>IFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>