force-app/main/default/objects/ExpoInfo__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Exhibition Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>