force-app/main/default/objects/ExpoInfo__c/fields/Hotel_Report__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Report__c</fullName>
    <description>酒店提报文案</description>
    <label>Hotel Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>