force-app/main/default/objects/ExpoInfo__c/fields/Hotel_Report_CN__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Report_CN__c</fullName>
    <description>酒店模块提示文案</description>
    <label>Hotel Report CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>