force-app/main/default/objects/ExpoInfo__c/fields/LastRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>LastRegistrationDate__c</fullName>
    <label>Last Registration Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>