force-app/main/default/objects/ExpoInfo__c/fields/Leave__c.field-meta.xml
<CustomField>
    <fullName>Leave__c</fullName>
    <description>离开文案</description>
    <label>Leave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>