force-app/main/default/objects/ExpoInfo__c/fields/Leave_CN__c.field-meta.xml
<CustomField>
    <fullName>Leave_CN__c</fullName>
    <label>Leave CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>