force-app/main/default/objects/ExpoInfo__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Exhibition Official Link</label>
    <type>Url</type>
</CustomField>