force-app/main/default/objects/ExpoInfo__c/fields/OutLineCN__c.field-meta.xml
<CustomField>
    <fullName>OutLineCN__c</fullName>
    <label>Exhibition Intro CN</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>