force-app/main/default/objects/ExpoInfo__c/fields/TitleCN__c.field-meta.xml
<CustomField>
    <fullName>TitleCN__c</fullName>
    <formula>Name</formula>
    <label>Exhibition Name CN Invisible</label>
    <type>Text</type>
</CustomField>