force-app/main/default/objects/ExpoInfo__c/fields/TitleEN__c.field-meta.xml
<CustomField>
    <fullName>TitleEN__c</fullName>
    <label>Exhibition Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>